--- a/src/ui-components/SideBar.css
+++ b/src/ui-components/SideBar.css
@@ -1,6 +1,7 @@
 .navbar {
   background-color: #000000;
-  height: 80px;
+  height: auto;
+  width: auto;
   display: flex;
   justify-content: flex-start;
   align-items: center;
